gateway/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: gateway-sa  # <-- 이 줄을 추가!
      containers:
        - name: gateway
          image: kt16project.azurecr.io/gateway:0704v5
          ports:
            - containerPort: 8080
