gateway/kubernetes/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ktlib-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - ktlib-gateway
  http:
  - match:
    - uri:
        prefix: /auth
    - uri:
        prefix: /users
    route:
    - destination:
        host: user
        port:
          number: 8080
  - match:
    - uri:
        prefix: /authors
    route:
    - destination:
        host: author
        port:
          number: 8080
  # --- 다른 모든 백엔드 서비스에 대한 규칙을 여기에 추가 ---
  # 예시:
  # - match:
  #   - uri:
  #       prefix: /books
  #   route:
  #   - destination:
  #       host: book
  #       port:
  #         number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 8080
